# rest_libcint

./: .gitignore  Cargo.toml  build.rs
doc/: book.toml
doc/src/: SUMMARY.md  data-init.md  dimensionality.md  installation.md  integral-dimensionality.md  integral.md  intro.md  thread-local.md
external_deps/: CMakeLists.txt
scripts/: generate_cecp_header.py  generate_header.py  generate_libcint_header.py
src/: cecp.rs  cecp_crafter.rs  cecp_wrapper.rs  cint.rs  cint_crafter.rs  cint_optimizer_rust.rs  cint_wrapper.rs  ecp.rs  lib.rs  prelude.rs  utilities.rs
src/cecp/: f2c.h  f2c_dgemm.c  nr_ecp.c  nr_ecp.h  nr_ecp_deriv.c
src/clib/: nr_ecp.c  nr_ecp.h  nr_ecp_deriv.c
tests/: coverage_cint.rs  pyscf_ecp_sb2me4.ipynb  pyscf_integral_c15_tzvp.ipynb  pyscf_integral_h2o_tzvp.ipynb  stress_integral_c15_tzvp.rs  test_ecp_sb2me4.rs  test_integral_c15_tzvp.rs  test_integral_h2o2_631g.rs  test_integral_h2o_631g.rs  test_integral_water_ccpVDZ.rs  valid_ecp_sb2me4.ipynb  valid_ecp_sb2me4_tzvp.rs  valid_integral_c15_tzvp.ipynb  valid_integral_c15_tzvp.py  valid_integral_h2o2_631g.py  valid_integral_h2o_631g.py  valid_integral_h2o_tzvp.rs
