[package]
name = "rest_libcint"
version = "0.1.1"
authors = ["Igor Ying Zhang <igor_zhangying@fudan.edu.cn>"]
edition = "2021"
description = "Provide wrappers for libcint (C)"
license = "MIT OR Apache-2.0"

[build-dependencies]
dunce = "1.0.0"
cc = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
rayon = "1.10"

[dev-dependencies]
ndarray = "0.15.6"
approx = "0.5.1"

[profile.dev]
opt-level = 3
overflow-checks = false
