[package]
name = "rest_libcint"
version = "0.1.1"
authors = ["Igor Ying Zhang <igor_zhangying@fudan.edu.cn>"]
edition = "2021"
description = "Provide wrappers for libcint (C)"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.12"
rayon = "1.10"

[build-dependencies]
dunce = "1.0"
cc = "1.0"

[dev-dependencies]
ndarray = "0.15"
approx = "0.5"

[profile.dev]
opt-level = 3
overflow-checks = false

[lib]
doctest = false
