[package]
name = "rest_libcint"
version = "0.1.1"
authors = ["Igor Ying Zhang <igor_zhangying@fudan.edu.cn>"]
edition = "2021"
description = "Provide wrappers for libcint (C)"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.12"
rayon = "1.10"
num-complex = "0.4"

[build-dependencies]
dunce = "1.0"
cc = "1.0"
cmake = "0.1"
ureq = { version = "2.9", default-features = false, features = ["native-certs", "native-tls", "gzip"]}
native-tls = "0.2"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
ndarray = "0.15"
approx = "0.5"

[profile.dev]
opt-level = 3

[lib]
doctest = false
